--- a/bower.json
+++ b/bower.json
@@ -13,11 +13,11 @@
     "platinum-elements": "PolymerElements/platinum-elements#1.0.1",
     "polymer-firebase-collection-input": "vision89/polymer-firebase-collection-input#~1.0.0",
     "polymer-firebase-login-buttons": "*",
-    "rating-system": "*",
     "simple-login-nav-button": "*",
     "polymer-simple-dropdown": "vision89/polymer-simple-dropdown#master",
     "paper-date-picker": "bendavis78/paper-date-picker#~1.0.3",
-    "paper-tooltip": "PolymerElements/paper-tooltip#~1.1.0"
+    "paper-tooltip": "PolymerElements/paper-tooltip#~1.1.0",
+    "happy-rating": "vision89/happy-rating#~1.0.1"
   },
   "devDependencies": {
     "web-component-tester": "*",
