--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,7 @@
     "platinum-elements": "PolymerElements/platinum-elements#1.0.1",
     "polymer-firebase-collection-input": "vision89/polymer-firebase-collection-input#~1.0.0",
     "polymer-firebase-login-buttons": "vision89/polymer-firebase-login-buttons#~1.0.4",
-    "simple-login-nav-button": "*",
+    "simple-login-nav-button": "vision89/simple-login-nav-button#~1.0.0",
     "polymer-simple-dropdown": "vision89/polymer-simple-dropdown#master",
     "paper-date-picker": "bendavis78/paper-date-picker#~1.0.3",
     "paper-tooltip": "PolymerElements/paper-tooltip#~1.1.0",
